# seekgpt-python

./: .gitignore  LICENSE  README.md  api.md  helpers.md  pyproject.toml  test.py  test_seekgpt.py
seekgpt/: __init__.py  client.py
src/seekgpt/: __init__.py  _base_client.py  _client.py  _exceptions.py  _files.py  _legacy_response.py  _models.py  _resource.py  _response.py  _streaming.py  _types.py  _version.py
src/seekgpt/_extras/: _common.py
src/seekgpt/_utils/: _logs.py  _resources_proxy.py  _utils.py
src/seekgpt/cli/: _cli.py  _errors.py  _utils.py
src/seekgpt/cli/_api/: completions.py  files.py
src/seekgpt/cli/_tools/: migrate.py
src/seekgpt/lib/: _old_api.py  _validators.py  azure.py
src/seekgpt/lib/_parsing/: _completions.py
src/seekgpt/resources/: batches.py  completions.py  embeddings.py  files.py  images.py  models.py  moderations.py  webhooks.py
src/seekgpt/resources/audio/: audio.py  speech.py  transcriptions.py  translations.py
src/seekgpt/resources/beta/: assistants.py  beta.py
src/seekgpt/resources/chat/: chat.py
src/seekgpt/resources/containers/: containers.py
src/seekgpt/resources/conversations/: conversations.py  items.py
src/seekgpt/resources/evals/: evals.py
src/seekgpt/resources/fine_tuning/: fine_tuning.py
src/seekgpt/resources/realtime/: client_secrets.py  realtime.py
src/seekgpt/resources/responses/: input_items.py  responses.py
src/seekgpt/resources/uploads/: parts.py  uploads.py
src/seekgpt/resources/vector_stores/: file_batches.py  files.py  vector_stores.py
src/seekgpt/types/: batch.py  batch_create_params.py  completion_create_params.py  embedding.py  embedding_create_params.py  image_create_variation_params.py  image_edit_params.py  image_generate_params.py  moderation_create_params.py  upload.py  upload_create_params.py  vector_store_create_params.py
src/seekgpt/types/audio/: speech_create_params.py  transcription_create_params.py  transcription_text_delta_event.py  transcription_text_done_event.py  translation_create_params.py
src/seekgpt/types/beta/: assistant.py  assistant_create_params.py  assistant_stream_event.py  assistant_update_params.py  file_search_tool.py  file_search_tool_param.py  thread.py  thread_create_and_run_params.py  thread_create_params.py  thread_update_params.py
src/seekgpt/types/chat/: chat_completion.py  chat_completion_assistant_message_param.py  chat_completion_chunk.py  chat_completion_content_part_image.py  chat_completion_content_part_image_param.py  chat_completion_message.py  chat_completion_stream_options_param.py  completion_create_params.py  parsed_function_tool_call.py
src/seekgpt/types/conversations/: item_create_params.py  item_retrieve_params.py
src/seekgpt/types/evals/: create_eval_completions_run_data_source.py  create_eval_completions_run_data_source_param.py  run_cancel_response.py  run_create_params.py  run_create_response.py  run_list_response.py  run_retrieve_response.py
src/seekgpt/types/fine_tuning/: fine_tuning_job.py  fine_tuning_job_wandb_integration.py  job_create_params.py
src/seekgpt/types/graders/: score_model_grader.py  score_model_grader_param.py
src/seekgpt/types/realtime/: audio_transcription.py  audio_transcription_param.py  realtime_audio_config_input.py  (+13 more)
(+69 files in other folders)
